// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trailingComma.notjson - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

================================================================================
`;

exports[`trailingComma.notjson - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  k1: "v1",
  k2: "v2",
  k3: "v3",
}

================================================================================
`;

exports[`trailingComma.notjson format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

================================================================================
`;

exports[`trailingComma.notjson format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  k1: "v1",
  k2: "v2",
  k3: "v3",
}

================================================================================
`;

exports[`trailingComma.notjson format 3`] = `
====================================options=====================================
parsers: ["json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

=====================================output=====================================
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

================================================================================
`;
